2023-02-21 Se configura versión para pruebas.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -280,7 +280,7 @@
                                     {
                                         @* SOLICITUD GV *@
                                         <li class="@(ViewBag.PrimerNivel == "gastos_viaje" ? "active" : null )">
-                                            <a><i class="fa fa-person-walking-luggage"></i>Gastos de Viaje <span class="fa fa-chevron-down"></span></a>
+                                            <a><i class="fa fa-person-walking-luggage"></i>Anticipo Gastos de Viaje <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "gastos_viaje" ? "display:block" : null )">
                                                 @if (User.IsInRole(TipoRoles.GV_SOLICITUD))
                                                 {
