--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -268,6 +268,19 @@
 
                                         </li>
                                     }
+                                       @if (User.IsInRole(TipoRoles.IT_INVENTORY))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "IT_epo_wsus" ? "active" : null )">
+                                            <a><i class="fa fa-network-wired"></i>IT - EPO/WSUS <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "IT_epo_wsus" ? "display:block" : null )">
+                                               
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_epo" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_epo")">Carga EPO</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_wsus" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_wsus")">Carga WSUS</a></li>
+                                                                                    
+                                            </ul>
+
+                                        </li>
+                                    }
 
 
                                     @if (User.IsInRole(TipoRoles.ADMIN))
