--- a/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/EpoNoInventario.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/EpoNoInventario.cshtml
@@ -1,23 +1,21 @@
 ﻿@model IEnumerable<Portal_2_0.Models.IT_epo>
 
 @{
-    ViewBag.Title = "Catálogo EPO";
+    ViewBag.Title = "En ePO pero no en Inventario";
     ViewBag.PrimerNivel = "IT_epo_wsus";
-    ViewBag.SegundoNivel = "IT_epo";
-    ViewBag.ControllerName = "IT_epo";
+    ViewBag.SegundoNivel = "IT_epo_wsus_reporte";
+    ViewBag.TercerNivel = "IT_epo_wsus_reporte_epo_no_inventario";
+    ViewBag.ControllerName = "IT_epo_wsus_reporte";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
-
-    //obtiene los filtros
-    Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
-
 
 }
 
 @section estilos
 {
     <!-- DataTables -->
-    @Styles.Render("~/Content/dataTables_css")
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap5.min.css">
 
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
@@ -52,16 +50,10 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div>
-                                    <br />
-                                    <a href="@Url.Action("LoadFile", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Cargar">
-                                        <i class="fa fa-upload"></i> Cargar EPO
-                                    </a>
-                                </div>
-                                <div class="ln_solid"></div>
+
                                 <div class="card-box table-responsive">
 
-                                    <table id="datatable1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable1" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>
@@ -186,7 +178,7 @@
                                     </table>
 
                                 </div>
-                                
+
                             </div>
 
 
@@ -204,7 +196,19 @@
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
 
-    @Scripts.Render("~/bundles/dataTables_js")
+    <!-- datatables con bootstrap -->
+    <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+
+    <!-- Para usar los botones -->
+    <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
+
+    <!-- Para los estilos en Excel     -->
+    <script src="https://cdn.jsdelivr.net/npm/datatables-buttons-excel-styles@1.1.2/js/buttons.html5.styles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/datatables-buttons-excel-styles@1.1.2/js/buttons.html5.styles.templates.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -224,7 +228,43 @@
             "ordering": true,
             "searching": true,
             "scrollX": true,
-            "info": true
+            "info": true,
+            dom: "Bfrtip",
+            buttons: [
+
+                {
+                    extend: "excel",
+                    text: "Exportar a Excel",
+                    className: "btn btn-success",
+                    excelStyles: [                    // Add an excelStyles definition
+
+                       
+                        {
+                            cells: "1:2",  // Smart select Columns A and B
+                            style: {                        // The style block
+                                font: {                     // Style the font
+                                    name: "Calibri",          // Font name
+                                    size: "11",             // Font size
+                                    color: "FFFFFF",        // Font Color
+                                    b: true,               // Remove bolding from header row
+                                },
+                                fill: {                     // Style the cell fill (background)
+                                    pattern: {              // Type of fill (pattern or gradient)
+                                        color: "0094ff",    // Fill color
+                                    }
+                                }
+                            }
+                        },
+                        {
+                            template: [
+                                "outline_blue_gray",
+                                "title_medium"]
+                            ,   // Apply the "green_medium" template
+                        },
+                    ],
+                },
+
+            ],
         });
 
         window.onload = function () {
